# finance-os

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .mcp.json  AGENT.md  AGENTS.md  CLAUDE.md  DESIGN.md  FINANCE-OS-CONTEXT.md  FINANCE_OS_UI_UX_PHASE_0_CLARIFICATION.md  FINANCE_OS_UI_UX_REPO_AUDIT.md  apply.stderr  biome.json  codex.patch  docker-compose.prod.build.yml  docker-compose.prod.https.yml  docker-compose.prod.yml  drizzle_fix.sql  note_cockpit.md  note_depense.md  note_investissements.md  note_patrimoine.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  test.patch  tsconfig.json
.claude/: settings.json
.codex/: config.toml
.github/: pull_request_template.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/static/: index.html
apps/knowledge-service/: Dockerfile  README.md  pyproject.toml
apps/knowledge-service/src/finance_os_knowledge/: app.py  config.py  models.py  redaction.py  schema.py  seed.py  store.py
apps/knowledge-service/src/finance_os_knowledge/backends/: __init__.py  embeddings.py  factory.py  neo4j_adapter.py  production_store.py  qdrant_adapter.py
apps/knowledge-service/src/finance_os_knowledge/ingest/: __init__.py  _common.py  advisor.py  cost_ledger.py  markets.py  news.py  social.py  trading_lab.py
apps/knowledge-service/tests/: test_ingest_adapters.py  test_knowledge_service.py  test_storage_status.py
apps/quant-service/: Dockerfile  pyproject.toml
apps/quant-service/src/finance_os_quant/: __init__.py  app.py  config.py  models.py
apps/quant-service/src/finance_os_quant/engines/: __init__.py  backtest.py  indicators.py  metrics.py  patterns.py  walk_forward.py
apps/quant-service/tests/: test_app.py  test_backtest.py  test_indicators.py  test_metrics.py  test_patterns.py  test_walk_forward.py
docs/: AI-ARCHITECTURE.md  AI-COSTS.md  AI-EVALS.md  AI-SETUP.md  SKILLS-INVENTORY.md  auth-demo-mode.md  autopilot-labels-glossary.md  autopilot-troubleshooting.md  ci-cd.md  debugging.md  deploy-dokploy-env.md  deploy-dokploy.md  deployment-dokploy.md  deployment.md  finance-os-full-inventory.md  mvp-dashboard.md  powens-mvp.md
e2e/: demo-smoke.spec.ts
scripts/: affected-tasks.mjs  check-ci.mjs  check-compose-env-parity.test.ts  (+18 more)
(+1511 files in other folders)
