[project]
name = "finance-os-knowledge-service"
version = "0.1.0"
description = "Internal temporal financial knowledge graph and Hybrid GraphRAG service for Finance-OS."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "neo4j>=5.28.0",
  "orjson>=3.10.12",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "qdrant-client>=1.12.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_os_knowledge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
