[project]
name = "finance-os-quant-service"
version = "0.1.0"
description = "Internal quant research service for Finance-OS Trading Lab. Paper-trading and backtesting only."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=2.1.0",
  "orjson>=3.10.12",
  "pandas>=2.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
full = [
  "vectorbt>=0.26.2",
  "quantstats>=0.0.64",
]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_os_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
