[package]
name = "finance_os_desktop"
version = "0.1.0"
description = "Finance-OS desktop shell"
authors = ["Finance-OS"]
edition = "2021"

[lib]
name = "finance_os_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
